add unresponsive, without view port UI, images and gifs

--- a/without-viewport.html
+++ b/without-viewport.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <meta name="description" content="A responsive Web app"/>
+    <meta name="description" content="A app without viewport"/>
     <link href="index.css" rel="stylesheet"/>
-    <title>Responsive App</title>
+    <title>App Without Viewport</title>
 </head>
 <body>
 <div class="app">
