update dir structure & add layout 2

--- a/without-viewport/without-viewport.html
+++ b/without-viewport/without-viewport.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="description" content="A app without viewport"/>
-    <link href="index.css" rel="stylesheet"/>
+    <link href="../index.css" rel="stylesheet"/>
     <title>App Without Viewport</title>
 </head>
 <body>
